# genome_changelog

./: .gitignore  a.tsv  aaa.tsv  added_genes.tsv  all_coordinate_changes_file.tsv  all_qualifier_changes.tsv  all_qualifier_changes_file.tsv  associate_comments_with_genome_changes.py  calculate_difference.py  check_genome_read.py  colours_from_genome.py  compare_genome_files.py  coordinate_changelog.sh  counts.tsv  create_single_coordinate_changes_file.py  create_single_qualifier_changes_file.py  custom_biopython.py  delete_results.sh  dummy.py  dummy.sh  dummy.tsv  dummy2.py  dummy2.sh  dummy2.tsv  dummy3.tsv  find_missing_synonyms.sh  find_synonym.sh  fix_known_errors_svn_files.py  formatting_functions.py  gather_obsoleted_names.py  genome_changes_pre_svn.tsv  genome_changes_summary.tsv  genome_changes_summary_with_comments.tsv  genome_changes_svn.tsv  genome_functions.py  genome_qc.py  genome_sequence_changes.tsv  get_all_entries_for_systematic_id.sh  get_all_genes_starting_with_SP_ever.sh  get_all_systematic_ids_ever.sh  (+41 more)
gene_changes_comments_and_pmids/: add_solexa.py  all_qualifier_changes_file.tsv  db_xref_to_exclude.tsv  gene-coordinate-change-data.tsv  known_orphan_comments_gene_add_remove.tsv  known_orphan_comments_gene_changes.tsv  merge_qualifier_changes.py  new-gene-data.tsv  removed-gene-data.tsv
gene_characterisation_status/: color_settings.json  counts.txt  format_counts.py  format_pre_svn_data.py  format_revisions.py  get_data.sh  get_latest_numbers.sh  get_monthly_revisions.py  latest_revision_counts.py  merge_counts_new.py  merge_counts_old.py  (+6 more)
(+50 files in other folders)
