[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "genome_changelog"
version = "0.1.0"

[tool.poetry.dependencies]
biopython = "^1.79"
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
