[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "genome_changelog"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
biopython = "^1.79"
python = "^3.9,<3.12"
requests = "^2.32.4"
pandas = "^1.5.1"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.0.0"]
